object_detection/pod.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tf-object-detection
spec:
  replicas: 1
  template:
    metadata:
      name: tf-object-detection
      labels:
        app: tf-object-detection
    spec:
      containers:
      - name: main
        image: dummyai/tf-object-detection
        ports:
        - containerPort: 5900
        tty: true
