object_detection/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dummy-ing
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "dummy-ingress"
spec:
  rules:
  - http:
      paths:
      - path: /tensorflow/object-detection
        backend:
          serviceName: tf-object-detection
          servicePort: 5900
  backend:
    serviceName: default-http-backend
    servicePort: 80
